体育投注UI修复

--- a/app/src/main/res/layout/content_bet_info_item_v3.xml
+++ b/app/src/main/res/layout/content_bet_info_item_v3.xml
@@ -199,7 +199,7 @@
                     android:paddingTop="9dp"
                     android:paddingBottom="9dp"
                     app:layout_constraintBottom_toTopOf="@id/llKeyboardContainer"
-                    tools:visibility="gone">
+                    tools:visibility="visible">
 
                     <androidx.constraintlayout.widget.Guideline
                         android:id="@+id/guideline_input"
