--- a/app/src/main/res/layout/activity_main_tab.xml
+++ b/app/src/main/res/layout/activity_main_tab.xml
@@ -17,11 +17,23 @@
             android:id="@+id/fl_content"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:layout_weight="1"
+            app:layout_constraintBottom_toTopOf="@+id/cLBottom"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <org.cxct.sportlottery.widget.ParlayFloatingWindow
+            android:id="@+id/parlayFloatWindow"
+            android:layout_marginBottom="20dp"
+            android:layout_width="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            android:layout_height="wrap_content"
             app:layout_constraintBottom_toTopOf="@+id/cLBottom"
-            android:layout_weight="1" />
+            />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cLBottom"
@@ -49,14 +61,7 @@
                 android:layout_height="3dp"
                 app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_view" />
 
-            <include
-                android:id="@+id/cl_bet_list_bar"
-                layout="@layout/bet_bar_layout"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/bet_list_bar_height"
-                android:visibility="gone"
-                app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_view"
-                tools:visibility="visible" />
+
 
             <LinearLayout
                 android:id="@+id/ll_home_back"
