--- a/app/src/main/res/layout/fragment_sport_left.xml
+++ b/app/src/main/res/layout/fragment_sport_left.xml
@@ -427,7 +427,7 @@
                     <TextView
                         android:id="@+id/tvOddsChangedTips"
                         android:drawableEnd="@drawable/ic_arrow_right_blue"
-                        android:text="赔率说明"
+                        android:text="@string/str_odds_description"
                         android:drawablePadding="5dp"
                         android:textColor="@color/color_025BE8"
                         android:layout_marginTop="10dp"
