--- a/app/src/main/res/layout/item_match_receipt.xml
+++ b/app/src/main/res/layout/item_match_receipt.xml
@@ -131,7 +131,7 @@
                     android:id="@+id/tv_league"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/color_6C7BA8_6C7BA8"
+                    android:textColor="@color/color_A7B2C4"
                     android:textSize="@dimen/textSize12sp"
                     android:layout_marginTop="2dp"
                     android:layout_marginStart="20dp"
@@ -146,9 +146,9 @@
                     android:id="@+id/tv_team_names"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/color_6C7BA8_6C7BA8"
+                    android:textColor="@color/color_535D76"
                     android:textSize="@dimen/textSize12sp"
-                    android:layout_marginTop="2dp"
+                    android:layout_marginTop="5dp"
                     android:layout_marginStart="20dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -173,23 +173,44 @@
 
                 <androidx.appcompat.widget.LinearLayoutCompat
                     android:id="@+id/llcOrder"
+                    android:visibility="gone"
+                    tools:visibility="visible"
                     android:layout_marginStart="20dp"
                     android:layout_marginEnd="10dp"
+                    app:layout_constraintTop_toBottomOf="@+id/match_receipt_bet_layout"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     android:layout_width="match_parent"
                     android:gravity="center_vertical"
                     android:layout_height="wrap_content">
 
-                    <TextView
-                        android:id="@+id/tvBetOrder"
-                        android:textColor="@color/color_9BB3D9_535D76"
-                        android:textSize="@dimen/textSize12sp"
-                        android:gravity="center_vertical"
-                        tools:text = "订单号：xxxxxx"
+                    <androidx.appcompat.widget.LinearLayoutCompat
                         android:layout_width="0dp"
                         android:layout_weight="1.5"
-                        android:layout_height="match_parent"/>
+                        android:gravity="center_vertical"
+                        android:layout_height="match_parent">
+
+                        <TextView
+                            android:textColor="@color/color_9BB3D9_535D76"
+                            android:textSize="@dimen/textSize12sp"
+                            android:text="@string/text_account_history_number"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+
+                        <TextView
+                            android:id="@+id/tvBetOrder"
+                            android:textColor="@color/color_9BB3D9_535D76"
+                            android:textSize="@dimen/textSize12sp"
+                            android:gravity="center_vertical"
+                            tools:text = ":fdsfdsfdsfdsfdsdfdsfdsfdsfdsx"
+                            android:layout_width="0dp"
+                            android:ellipsize="end"
+                            android:layout_weight="1"
+                            android:maxLines="1"
+                            android:textStyle="bold"
+                            android:layout_height="match_parent"/>
+                    </androidx.appcompat.widget.LinearLayoutCompat>
+
 
                     <TextView
                         android:id="@+id/tvBetTime"
@@ -197,6 +218,7 @@
                         android:textSize="@dimen/textSize12sp"
                         android:layout_width="0dp"
                         android:gravity="end|center_vertical"
+                        android:textStyle="bold"
                         android:layout_weight="1"
                         android:text="2023-01-12 10:59:45"
                         android:layout_height="match_parent"/>
