--- a/app/src/main/res/layout/home_cate_tab.xml
+++ b/app/src/main/res/layout/home_cate_tab.xml
@@ -15,6 +15,7 @@
         android:layout_height="wrap_content"
         android:maxLines="1"
         android:textAllCaps="true"
+        android:textStyle="bold"
         android:textColor="@color/color_select_blue_black"
         android:textSize="12sp"
         tools:text="全部" />
@@ -25,6 +26,7 @@
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:layout_marginLeft="@dimen/margin_4"
+        android:textStyle="bold"
         android:maxLines="1"
         android:textColor="@color/color_select_white_gray"
         android:textSize="12sp"
