--- a/app/src/main/res/layout/bet_bar_layout2.xml
+++ b/app/src/main/res/layout/bet_bar_layout2.xml
@@ -20,8 +20,8 @@
             android:layout_marginVertical="5dp"
             android:layout_marginStart="6dp"
             android:text="@string/str_bet_parlay"
-            android:textColor="@color/color_FFFFFF_414655"
-            android:textFontWeight="500"
+            android:textColor="@color/color_025BE8"
+            android:textStyle="bold"
             android:textSize="@dimen/textSize14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -45,6 +45,7 @@
             android:layout_marginStart="4dp"
             android:layout_marginEnd="8dp"
             android:gravity="center"
+            android:fontFamily="@font/din_pro_medium"
             android:textColor="@color/color_FFFFFF_FFFFFF"
             android:textSize="@dimen/textSize14sp"
             app:layout_constraintBottom_toBottomOf="parent"
