--- a/app/src/main/res/layout/item_parlay_receipt.xml
+++ b/app/src/main/res/layout/item_parlay_receipt.xml
@@ -60,12 +60,12 @@
                 android:id="@+id/tv_winnable_amount_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
                 android:text="@string/bet_receipt_win_quota_with_sign"
                 android:textColor="@color/color_9BB3D9_535D76"
                 android:textSize="@dimen/textSize12sp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_play_name_parlay" />
+                app:layout_constraintBottom_toBottomOf="@+id/tv_winnable_amount"
+                app:layout_constraintEnd_toStartOf="@+id/tv_winnable_amount"
+                app:layout_constraintTop_toTopOf="@+id/tv_winnable_amount" />
 
             <TextView
                 android:id="@+id/tv_winnable_amount"
@@ -76,10 +76,8 @@
                 android:textColor="@color/color_DB6372"
                 android:textSize="@dimen/textSize12sp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="@+id/tv_winnable_amount_title"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/tv_winnable_amount_title"
-                app:layout_constraintTop_toTopOf="@+id/tv_winnable_amount_title"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 tools:text="43.00" />
 
             <TextView
@@ -110,22 +108,21 @@
                 android:text="@string/bet_receipt_bet_quota_with_sign"
                 android:textColor="@color/color_9BB3D9_535D76"
                 android:textSize="@dimen/textSize12sp"
-                app:layout_constraintBottom_toBottomOf="@+id/tv_bet_amount"
-                app:layout_constraintEnd_toStartOf="@+id/tv_bet_amount"
-                app:layout_constraintTop_toTopOf="@+id/tv_bet_amount" />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
 
             <TextView
                 android:id="@+id/tv_bet_amount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
                 android:fontFamily="@font/din_regular"
                 android:gravity="start"
                 android:textColor="@color/color_414655"
                 android:textSize="@dimen/textSize12sp"
                 android:textStyle="bold"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvBetResutStatu"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_bet_amount_title"
+                app:layout_constraintStart_toEndOf="@+id/tv_bet_amount_title"
+                app:layout_constraintTop_toTopOf="@+id/tv_bet_amount_title"
                 tools:text="50.00" />
 
             <TextView
