--- a/app/src/main/res/layout/item_parlay_receipt.xml
+++ b/app/src/main/res/layout/item_parlay_receipt.xml
@@ -86,6 +86,7 @@
                 android:layout_height="wrap_content"
                 android:drawablePadding="6dp"
                 android:textSize="12sp"
+                android:visibility="gone"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="投注成功" />
