--- a/app/src/main/res/layout/button_odd_home.xml
+++ b/app/src/main/res/layout/button_odd_home.xml
@@ -76,8 +76,8 @@
                     android:layout_height="wrap_content"
                     android:textColor="@color/selector_button_odd_bottom_text"
                     android:textSize="@dimen/textSize14sp"
-                    android:fontFamily="@font/din_regular"
-                    android:textFontWeight="700"
+                    android:fontFamily="@font/din_pro_medium"
+                    android:textStyle="bold"
                     tools:text="1.067" />
             </LinearLayout>
 
