--- a/app/src/main/res/layout/item_league.xml
+++ b/app/src/main/res/layout/item_league.xml
@@ -32,6 +32,7 @@
             android:layout_weight="1"
             android:singleLine="true"
             android:ellipsize="end"
+            android:textFontWeight="500"
             android:maxLines="1"
             android:layout_marginLeft="4dp"
             android:layout_marginRight="@dimen/margin_10"
