--- a/app/src/main/res/layout/item_sport_odd.xml
+++ b/app/src/main/res/layout/item_sport_odd.xml
@@ -175,6 +175,7 @@
                             android:layout_marginRight="5dp"
                             android:layout_weight="1"
                             android:ellipsize="end"
+                            android:fontFamily="@font/din_regular"
                             android:gravity="center_vertical"
                             android:singleLine="true"
                             android:textColor="@color/color_535D76"
@@ -318,6 +319,7 @@
                             android:layout_weight="1"
                             android:ellipsize="end"
                             android:gravity="center_vertical"
+                            android:fontFamily="@font/din_regular"
                             android:singleLine="true"
                             android:textColor="@color/color_535D76"
                             android:textSize="@dimen/textSize12sp"
