--- a/app/src/main/res/layout/single_toast_bet.xml
+++ b/app/src/main/res/layout/single_toast_bet.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/llRoot"
-    android:gravity="center">
+    android:gravity="bottom|center_horizontal">
 
     <LinearLayout
         android:id="@+id/llContent"
@@ -12,16 +12,10 @@
         android:layout_height="wrap_content"
         android:background="@drawable/bg_black_radius_10"
         android:gravity="center"
+        android:layout_marginBottom="200dp"
         android:paddingVertical="8dp"
         android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/iv_success_error"
-            android:layout_width="@dimen/margin_36"
-            android:layout_height="@dimen/margin_36"
-            android:paddingBottom="5dp"
-            android:visibility="visible"
-            tools:src="@drawable/icon_toast_success" />
 
         <TextView
             android:id="@+id/tv_massage"
