体育投注BUG修复

--- a/app/src/main/res/layout/content_bet_info_item_v3.xml
+++ b/app/src/main/res/layout/content_bet_info_item_v3.xml
@@ -97,6 +97,8 @@
                         android:layout_height="wrap_content"
                         android:textColor="@color/color_025BE8_025BE8"
                         android:textSize="@dimen/textSize16sp"
+                        android:textStyle="bold"
+                        android:fontFamily="din"
                         tools:text="\@ 0.89" />
 
                     <ImageView
