--- a/app/src/main/res/layout/activity_main_tab.xml
+++ b/app/src/main/res/layout/activity_main_tab.xml
@@ -27,6 +27,7 @@
 
         <org.cxct.sportlottery.widget.ParlayFloatingWindow
             android:id="@+id/parlayFloatWindow"
+            android:visibility="gone"
             android:layout_marginBottom="20dp"
             android:layout_width="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
