--- a/app/src/main/res/layout/dialog_redenvelope_fail.xml
+++ b/app/src/main/res/layout/dialog_redenvelope_fail.xml
@@ -70,6 +70,7 @@
             android:src="@drawable/ic_chest" />
 
         <ImageView
+            android:id="@+id/iv_buble_1"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginLeft="50dp"
@@ -77,6 +78,7 @@
             android:src="@drawable/ic_pop_tennis" />
 
         <ImageView
+            android:id="@+id/iv_buble_2"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginLeft="50dp"
@@ -84,6 +86,7 @@
             android:src="@drawable/ic_pop_basketball" />
 
         <ImageView
+            android:id="@+id/iv_buble_3"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_alignParentRight="true"
@@ -92,6 +95,7 @@
             android:src="@drawable/ic_pop_football" />
 
         <ImageView
+            android:id="@+id/iv_buble_4"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_alignParentRight="true"
