--- a/app/src/main/res/layout/motion_view_red_envelope_floating.xml
+++ b/app/src/main/res/layout/motion_view_red_envelope_floating.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginBottom="@dimen/margin_15"
+    android:layout_marginBottom="60dp"
     app:layoutDescription="@xml/line_detail_scene">
 
     <org.cxct.sportlottery.ui.common.MovableAdsorptionLinearLayout
