修改UI走查问题

--- a/app/src/main/res/layout/content_bet_info_item_v3.xml
+++ b/app/src/main/res/layout/content_bet_info_item_v3.xml
@@ -384,6 +384,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="#36DF9D9D"
+                        android:visibility="gone"
+                        tools:visibility="visible"
                         app:layout_constraintTop_toTopOf="parent">
 
                         <ImageView
