修改UI走查问题

--- a/app/src/main/res/layout/bet_bar_layout.xml
+++ b/app/src/main/res/layout/bet_bar_layout.xml
@@ -72,9 +72,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/margin_2"
-        android:fontFamily="@font/din_regular"
-        android:textColor="@color/color_FFFFFF_414655"
-        android:textFontWeight="700"
+        android:fontFamily="@font/din_pro_medium"
         android:textSize="@dimen/textSize16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/tv_balance"
@@ -86,9 +84,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/margin_10"
-        android:fontFamily="@font/din_regular"
+        android:fontFamily="@font/din_pro_medium"
         android:textColor="@color/color_FFFFFF_414655"
-        android:textFontWeight="700"
         android:textSize="@dimen/textSize18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/iv_arrow"
