忘记密码title优化

--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -25,8 +25,7 @@
         android:src="@drawable/ic_arrow_login"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/v_top" />
-
-    <TextView
+    <com.flyjingfish.gradienttextviewlib.GradientTextView
         android:id="@+id/tv_title_forget_password"
         android:layout_marginTop="@dimen/margin_20"
         android:layout_width="wrap_content"
@@ -34,9 +33,13 @@
         android:layout_centerInParent="true"
         android:textSize="24dp"
         android:textStyle="bold"
+        android:text="@string/forget_password"
         app:layout_constraintTop_toBottomOf="@+id/v_top"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:gradient_angle="270"
+        app:gradient_startColor="@color/color_71ADFF"
+        app:gradient_endColor="@color/color_1971FD" />
 
     <ImageView
         android:id="@+id/ivLogo"
