--- a/app/src/main/res/layout/item_match_receipt.xml
+++ b/app/src/main/res/layout/item_match_receipt.xml
@@ -206,8 +206,8 @@
                             android:layout_width="0dp"
                             android:ellipsize="end"
                             android:layout_weight="1"
+                            android:fontFamily="@font/din_alternate_bold"
                             android:maxLines="1"
-                            android:textStyle="bold"
                             android:layout_height="match_parent"/>
                     </androidx.appcompat.widget.LinearLayoutCompat>
 
