--- a/app/src/main/res/layout/item_parlay_receipt.xml
+++ b/app/src/main/res/layout/item_parlay_receipt.xml
@@ -22,7 +22,7 @@
         android:layout_height="59dp"
         android:layout_marginHorizontal="@dimen/margin_14"
         android:layout_marginBottom="14dp"
-        android:background="@drawable/bg_parlay_bet_successful"
+        android:background="@drawable/bg_sucessful"
         android:paddingHorizontal="10dp"
         android:paddingVertical="9dp">
 
